# Sprite-Motif-Pipeline

./: .gitignore  LICENSE  NOTICE  README.en.md  README.md  pyproject.toml  start_gui.bat
docs/: model_setup.md
src/sprite_motif_pipeline/: __init__.py  cli.py  comfy.py  config.py  gui.py  image_backends.py  model_assets.py  ollama.py  postprocess.py  processes.py  progress.py  prompt_training_examples.jsonl  prompting.py  runner.py  session.py  web_gui.py  workflow.py
tests/: test_cli.py  test_comfy_launch.py  test_comfy_validation.py  test_config.py  test_image_backends.py  test_model_assets.py  test_ollama.py  test_postprocess.py  test_progress.py  test_prompting.py  test_runner.py  test_web_gui.py  test_workflow.py
workflows/: qwen_image_2512_pixel_sprite_api.json
